# simple-spreadsheet-tools

./: .gitignore  ListUtilities.hs  Parser.hs  Reformatter.hs  Renderer.hs  Sorting.hs  Spreadsheet.cabal  Spreadsheet.hs  SsToMd.hs  Transform.hs  example.ss
Spreadsheet/: Parser.hs  Quote.hs  Renderer.hs  Transform.hs
lib/: Spreadsheet.hs
lib/Spreadsheet/: Parser.hs  Quote.hs  Renderer.hs  Sorting.hs  Transform.hs
