name:                Spreadsheet
version:             0.1.1.0
synopsis:            Simple text-based table file-format tools
license:             BSD3
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2013 Eric Mertens
category:            Text
build-type:          Simple
cabal-version:       >=1.8

library

  hs-source-dirs:      lib

  build-depends:       base             >=4.5.0 && <5.0,
                       time             >=1.4.0 && <1.9,
                       parsec           >=3.1.0 && <3.2,
                       template-haskell >=2.7   && <2.12

  exposed-modules:     Spreadsheet,
                       Spreadsheet.Parser,
                       Spreadsheet.Transform,
                       Spreadsheet.Renderer,
                       Spreadsheet.Sorting
                       Spreadsheet.Quote
  other-modules:       ListUtilities

executable Reformatter
  main-is:             Reformatter.hs
  build-depends:       base, parsec, Spreadsheet

executable SsToMd
  main-is:             SsToMd.hs
  build-depends:       base, parsec, Spreadsheet
